# legion-graph

./: .env.cognee.example  .env.example  .env.production.template  .gitignore  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  Dockerfile.auth  Dockerfile.base  Dockerfile.cognee  Dockerfile.ingestion  Dockerfile.rest-api  Dockerfile.search  LICENSE  Makefile  NOTICE  README.md  SBOM.md  SECURITY.md  pyproject.toml  requirements-auth.txt  requirements-base.txt  requirements-ingestion.txt  requirements-lock.txt  requirements-rest-api.txt  requirements-search.txt  requirements.txt  sbom.json
api/: README.md  __init__.py  auth.py  main.py
auth/: README.md  __init__.py  api_token_utils.py  database.py  jwt_utils.py  knowledge_models.py  main.py  token_blacklist.py
certs/: cert.pem  key.pem
config/: config_manager.py  database_config.py  enhanced_config.py  lightrag.yaml  redis.conf
docker/: INFRA.md  README.md  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  OPERATIONS.md  SETUP.md  USAGE.md
graph_services/: Dockerfile.cognee  requirements-cognee.txt  requirements-v2pipeline.txt
grpc_server/: README.md  __init__.py  config.py  server.py  token_blacklist.py
kgrag/: __init__.py  code_llm_processor.py  config.py  cypher_validator.py  database.py  document_extraction.py  embeddings.py  fusion.py  secrets.py
postman/: kgrag.e2e.postman_collection.json  kgrag.postman_collection.json  kgrag.postman_environment.json
scripts/: generate_protos.sh  generate_sbom.py  patch_protobuf_version.py
shared/: canonical_path.py  canonicaliser.py  code_extraction.py  (+10 more)
(+426 files in other folders)
